tests/ui/core_policy_lifecycle_kind_reintroduction.stderr
error[E0432]: unresolved imports `hibana::integration::cap::control::LoadBeginKind`, `hibana::integration::cap::control::LoadCommitKind`, `hibana::integration::cap::control::PolicyActivateKind`, `hibana::integration::cap::control::PolicyAnnotateKind`, `hibana::integration::cap::control::PolicyLoadKind`, `hibana::integration::cap::control::PolicyRevertKind`
 --> tests/ui/core_policy_lifecycle_kind_reintroduction.rs:2:5
  |
2 |     LoadBeginKind, LoadCommitKind, PolicyActivateKind, PolicyAnnotateKind, PolicyLoadKind,
  |     ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^ no `PolicyLoadKind` in `integration::buckets::cap::control`
  |     |              |               |                   |
  |     |              |               |                   no `PolicyAnnotateKind` in `integration::buckets::cap::control`
  |     |              |               no `PolicyActivateKind` in `integration::buckets::cap::control`
  |     |              no `LoadCommitKind` in `integration::buckets::cap::control`
  |     no `LoadBeginKind` in `integration::buckets::cap::control`
3 |     PolicyRevertKind,
  |     ^^^^^^^^^^^^^^^^ no `PolicyRevertKind` in `integration::buckets::cap::control`
